# aztec-contract-verifier

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
contracts/counter/: Nargo.toml  codegenCache.json
contracts/counter/src/: main.nr
contracts/counter/src/artifacts/: Counter.ts
contracts/token/: Nargo.toml
contracts/token/src/: main.nr
contracts/token/src/types/: balance_set.nr
scripts/: deploy.mjs  developing.mjs  verify_class_id.mjs
scripts/abi/: abi.mjs  buffer.mjs  contract_artifact.mjs  decoder.mjs  function_selector.mjs  note_selector.mjs  selector.mjs  utils.mjs
scripts/hash/: artifact_hash.mjs  vk.mjs
scripts/noir/: index.mjs
scripts/util/: generate_artifact.mjs  merkle.mjs
src/: args.rs  compiler.rs  github.rs  lib.rs  main.rs  source.rs  toolchain.rs
src/compiler/: build.rs  mod.rs  run.rs
src/github/: mod.rs  releases.rs
src/util/: platform.rs
