[package]
name = "aztec-contract-verifier"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
inquire = "0.6"
dirs-next = "2"
zip = "0.6"
dirs = "4"
serde_json = "1.0"